# nuwa

./: README.md  package-lock.json  package.json
.github/workflows/: nuwa-identity-kit-coverage.yml  nuwa-identity-kit-test.yml  packages-coverage.yml  packages-test.yml
agents/nuwa/: package-lock.json  package.json
examples/crypto_tycoon/: Move.toml
examples/hello_task/: README.md  main.py
examples/webpage_summary_task/: main.py
nips/: nip-3.md  nip-4.md  nip-5.md  nip-6.md  nip-7.md  nip-template.md
nips/NIPs/: nip-1.md  nip-10.md  nip-7.md  nip-9.md
nuwa-framework/: Move.toml
nuwa-framework/sources/: agent.move  agent_debugger.move  agent_entry.move  agent_info.move  agent_input.move  agent_input_info.move  agent_runner.move  ai_callback.move  ai_service.move  character.move  character_registry.move  config.move  genesis.move  memory.move  name_registry.move  prompt_builder.move  prompt_input.move  ring_buffer.move  (+5 more)
nuwa-script/: README.md
nuwa-script/implementations/python/: .gitignore  README.md  pyproject.toml
nuwa-script/implementations/python/examples/: README.md  generate_with_llm.py
nuwa-script/implementations/python/nuwa/: ast.py  interpreter.py  lexer.py  parser.out  parser.py  parsetab.py  prompts.py  tools.py
nuwa-script/implementations/python/tests/: test_interpreter.py  test_parser.py
pwa/: index.html  package-lock.json  package.json  pnpm-lock.yaml
scripts/: decode_oracle_request.py
web/: package-lock.json  package.json  vite.config.ts
website/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
(+161 files in other folders)
